platform/infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-serving-ingress
  namespace: ml-serving
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: credit-risk-api
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: credit-risk-api
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: credit-risk-api
                port:
                  number: 80
